--- a/app/views/profile/_ways_to_contact.html.erb
+++ b/app/views/profile/_ways_to_contact.html.erb
@@ -102,7 +102,7 @@
     </td>
   </tr>
   <% if @user_data[:can_edit_channels] %>
-    <tr>
+    <tr class="add_email_link">
       <td colspan="3" style="text-align: center;">
         <a href="#" class="add_email_link icon-add" title="<%= t("Add Email Address") %>" aria-label="<%= t("Add Email Address") %>"><%= t('links.add_email_address', "Email Address") %></a>
       </td>
