--- a/ui/features/discussion_topic_edit/jst/EditView.handlebars
+++ b/ui/features/discussion_topic_edit/jst/EditView.handlebars
@@ -191,7 +191,7 @@
           {{/if}}
           {{#if canModerate}}
           {{#unless homeroomCourse}}
-          <div><label class="checkbox short-label" for="podcast_enabled">
+          <div><label class="checkbox short-label podcast_enabled" for="podcast_enabled">
               {{checkbox "podcast_enabled"
               checked=podcast_url
               class="element_toggler"
