--- a/app/views/shared/_canvas_footer.erb
+++ b/app/views/shared/_canvas_footer.erb
@@ -17,14 +17,14 @@
 %>
 
 <footer role="contentinfo" id="footer" class="ic-app-footer">
-  <a href="http://www.instructure.com" class="footer-logo ic-app-footer__logo-link">
+  <a href="http://www.instructure.com" class="footer-logo ic-app-footer__logo-link" style="display: none">
     <span class="screenreader-only">
       <%= t(:by_instructure, 'By Instructure') %>
     </span>
   </a>
   <div id="footer-links" class="ic-app-footer__links">
     <% if Setting.get("show_opensource_linkback", "false") == "true" %>
-      <a href="http://instructure.com"><%= t('open_source_learning_management_system', 'Open Source LMS') %></a>
+      <a target="_blank" href="https://gitlab.dlc.ntu.edu.tw/ntu-cool/canvas-lms">Powered by canvas-lms</a>
     <% end %>
     <%= render :partial => 'shared/footer_links' %>
   </div>
