--- a/app/views/communication_channels/confirm.html.erb
+++ b/app/views/communication_channels/confirm.html.erb
@@ -130,9 +130,9 @@ Which is you?", :count => @merge_opportunities.length %>
     </div>
   <% elsif @enrollment && @pseudonym %>
     <div class="disambiguation_box"<%= ' style="display: none;"'.html_safe if params[:register] %>>
-      <p><%= mt 'details.account_needed', "You've been invited to join **%{course}**. To accept this request you need a Canvas account. Click the link below to create a Canvas account.", :course => @course.name %></p>
+      <p><%= mt 'details.account_needed', "You've been invited to join **%{course}**. To accept this request you need a NTU COOL account. Click the link below to create a NTU COOL account.", :course => @course.name %></p>
       <div class="button_box ic-Login-confirmation__actions">
-        <a href="<%= login_url(:host => HostUrl.context_host(@root_account, request.try(:host_with_port)), :confirm => @communication_channel.confirmation_code, :enrollment => @enrollment.uuid) %>" class="btn not_external"><%=  t 'buttons.have_account', "I Have a Canvas Account" %></a>
+        <a href="<%= login_url(:host => HostUrl.context_host(@root_account, request.try(:host_with_port)), :confirm => @communication_channel.confirmation_code, :enrollment => @enrollment.uuid) %>" class="btn not_external"><%=  t 'buttons.have_account', "I'm from NTU or already have a NTU COOL account" %></a>
         <a href="#" class="btn" id="register"><%= t 'buttons.create_account', 'Create My Account' %></a>
       </div>
     </div>
