Update Module Index Page Header
closes LF-1221

flag=instui_header

test plan:
- goto modules page for a course
- check that new header match specifications

Change-Id: Idd77b2fb01778d337207c4dedb4aeefb18ac5d45
Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/341101
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
Reviewed-by: Sarah Gerard <sarah.gerard@instructure.com>
QA-Review: Sarah Gerard <sarah.gerard@instructure.com>
Product-Review: Alvaro Talavera <alvaro.talavera@instructure.com>

--- a/app/stylesheets/bundles/content_next.scss
+++ b/app/stylesheets/bundles/content_next.scss
@@ -327,3 +327,14 @@ input.move-module-label-spacer {
     border: none;
   }
 }
+
+.context-modules-header-publish-menu-responsive button,
+  .context-modules-header-more-menu-responsive button {
+    display: block;
+    width: 100% !important;
+  }
+
+  #context-modules-header-view-progress-button,
+  #context-modules-header-export-course-button {
+    text-decoration: none;
+  }
