--- a/app/views/discussion_topics/show.html.erb
+++ b/app/views/discussion_topics/show.html.erb
@@ -202,7 +202,7 @@
           <%= render :partial => 'group_discussion', :locals => {show_da_note: (@topic.for_assignment? && @topic.assignment.only_visible_to_overrides)} %>
         <% end %>
         <header class="discussion-section clearfix">
-          <%= avatar((@topic.user), context_code: @context.asset_string) if @topic.user %>
+          <%= avatar((@topic.user), context_code: @context.asset_string, skip_url: true) if @topic.user %>
           <div class="discussion-header-content right-of-avatar">
             <div class="pull-left">
               <h1 class="discussion-title"><%= @topic.title %></h1>
@@ -360,7 +360,7 @@
     <div id="filterResults" class="discussion_subentries hidden"></div>
 
   </div>
-  
+
   <% unless @topic.is_announcement && Account.site_admin.feature_enabled?(:assignment_edit_placement_not_on_announcements) %>
     <%= prefetch_assignment_external_tools %>
   <% end %>
