fix: Update how-to instructions for exporting Gradebook CSV from NTUCOOL #295

--- a/app/views/gradebook_uploads/new.html.erb
+++ b/app/views/gradebook_uploads/new.html.erb
@@ -61,6 +61,6 @@
 
 <!-- COOL mod start -->
 <%= content_tag :p, t('#gradebook_uploads.how_to_title', 'How to export the Gradebook CSV file from NTU COOL?'), class: 'ic-Label', style: 'margin-top: 46px; margin-bottom: 12px' %>
-<%= content_tag :p, t('#gradebook_uploads.how_to_detail', 'Go to the Grades page → “Import and Export” → “Export Entire Gradebook” → Open the downloaded file. Afterwards, you can edit grades in the file, save as CSV, and upload it to this page.'), style: 'margin-bottom: 6px' %>
-<%= image_tag 'https://files-1.dlc.ntu.edu.tw/canvas/export-gradebook-tutorial.png', title: 'export gradebook tutorial' %>
+<%= content_tag :p, t('#gradebook_uploads.how_to_detail', 'Go to the Grades page → “Export” → “Export Entire Gradebook” → Open the downloaded file. Afterwards, you can edit grades in the file, save as CSV, and upload it to this page.'), style: 'margin-bottom: 6px' %>
+<%= image_tag 'https://files-1.dlc.ntu.edu.tw/canvas/export-gradebook-tutorial-2025-08-28.png', title: 'export gradebook tutorial' %>
 <!-- COOL mod end -->
